<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="currentWeather"
            type="com.lampro.myaccuweather.objects.currentweatherresponse.CurrentWeatherResponse" />

        <import type="com.lampro.myaccuweather.utils.StringUtils" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.WeatherFor7Days">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true">

            <LinearLayout
                android:id="@+id/bottomnav"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/nav_bg_gradient"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:rotation="180"
                    android:src="@drawable/icon_chevron_left" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottomnav"
                android:background="@drawable/background_gradient"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@{currentWeather.name}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    tools:text="Ha Noi" />

                <TextView
                    android:id="@+id/tvCountryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@{currentWeather.sys.country}"
                    android:textColor="#7AFFFFFF"
                    android:textSize="@dimen/_10ssp"
                    tools:text="VN" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/max"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16ssp" />

                        <TextView
                            android:id="@+id/maxTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@{StringUtils.INSTANCE.convertDouble2String(Math.ceil(currentWeather.main.tempMax+1))}"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16ssp"
                            tools:text="20" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="°"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/min"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16ssp" />

                        <TextView
                            android:id="@+id/minTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@{StringUtils.INSTANCE.convertDouble2String(Math.ceil(currentWeather.main.tempMin-5))}"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16ssp"
                            tools:text="18" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="°"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16ssp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensan_bold"
                        android:paddingHorizontal="@dimen/_30sdp"
                        android:text="@string/days_forecasts"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:rotation="180"
                            android:src="@drawable/icon_chevron_left"
                            android:visibility="invisible" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_5Days"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_150sdp"
                            android:layout_weight="15"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:src="@drawable/icon_chevron_left"
                            android:visibility="invisible" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:background="@drawable/bg_frame_airquality_gradient"
                    android:elevation="@dimen/_5sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="@dimen/_15sdp"
                        android:paddingVertical="@dimen/_10sdp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_crosshairs" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:fontFamily="@font/opensans_regular"
                            android:text="@string/air_quality"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvAirQuality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensan_bold"
                        android:paddingHorizontal="@dimen/_15sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        tools:text="-1 - Ổn định" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_3sdp"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/bg_frame_hour_gradient" />

                    <RelativeLayout
                        android:id="@+id/btnSeeMore"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_25sdp"
                        android:clickable="false"
                        android:orientation="horizontal"
                        android:paddingHorizontal="@dimen/_15sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/see_more"
                            android:textColor="@color/white" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="center"
                            android:padding="@dimen/_7sdp"
                            android:src="@drawable/icon_chevron_left" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_frame_gradient_border"
                        android:elevation="@dimen/_5sdp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:orientation="horizontal"
                            android:paddingHorizontal="@dimen/_2sdp"
                            android:paddingVertical="@dimen/_7sdp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/star1" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/opensans_regular"
                                android:text="@string/sunrise"
                                android:textSize="@dimen/_13ssp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingHorizontal="@dimen/_10sdp">

                            <TextView
                                android:id="@+id/timeSunrise"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/opensan_bold"
                                android:textSize="@dimen/_16ssp"
                                tools:text="5:28 AM" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="@dimen/_10sdp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/opensan_bold"
                                android:maxWidth="@dimen/_50sdp"
                                android:text="@string/sunset"
                                android:textColor="#9CFFFFFF" />

                            <TextView
                                android:id="@+id/timeSunset"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/opensan_bold"
                                android:textColor="#73FFFFFF"
                                tools:text="7:25 PM" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_frame_gradient_border"
                        android:elevation="@dimen/_5sdp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:orientation="horizontal"
                            android:paddingHorizontal="@dimen/_2sdp"
                            android:paddingVertical="@dimen/_7sdp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/star1" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/opensans_regular"
                                android:text="@string/uv_index"
                                android:textSize="@dimen/_13ssp" />
                        </LinearLayout>


                        <TextView
                            android:id="@+id/tvUvIndex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensan_bold"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:text="10"
                            android:textSize="@dimen/_16ssp"
                            tools:text="-4" />

                        <TextView
                            android:id="@+id/tvUvIndex2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensan_bold"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:text="@string/moderate"
                            android:textSize="@dimen/_16ssp"
                            tools:text="Moderate" />

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


    </FrameLayout>
</layout>